[package]
name = "riemann_ocean"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
nalgebra = "0.32"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-complex = "0.4"
num-traits = "0.2"
chrono = "0.4"
plotters = "0.3"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = true